// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageLinkCard /> should render to snapshot with only props 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-a45fgx-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiCardContent-root css-1fnncg9-MuiCardContent-root"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        id="Card_"
      />
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-1n0ge38-MuiDivider-root"
      />
    </div>
    <div
      class="MuiCardActions-root MuiCardActions-spacing css-10r5to9-MuiCardActions-root"
    />
  </div>
</div>
`;

exports[`<ImageLinkCard /> should show the title 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-a45fgx-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiCardContent-root css-1fnncg9-MuiCardContent-root"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
        id="Card_This is the Title"
      >
        This is the Title
      </h5>
      <hr
        class="MuiDivider-root MuiDivider-fullWidth css-1n0ge38-MuiDivider-root"
      />
    </div>
    <div
      class="MuiCardActions-root MuiCardActions-spacing css-10r5to9-MuiCardActions-root"
    />
  </div>
</div>
`;
